chore: Update posts

--- a/source/_posts/daily/2023/06/06.md
+++ b/source/_posts/daily/2023/06/06.md
@@ -13,3 +13,9 @@ date: 2023-06-06 07:03:58
 
   1. Mask： 主要用途是在雕塑的时候可以保护细节不被影响，还有就是控制显示和隐藏
   2. Face Sets: 网格体分组(使用不同的颜色标记)
+
+缓存了下数字城市的白模数据，然后通过自定义着色器程序添加了环形动画。
+
+确认了大屏3D渲染新方案，确认了数据格式的准确性。
+
+优先开始看Github Action了，要不后面都得手动同步，好麻烦。
