chore: Update posts

--- a/source/_posts/daily/2023/06/08.md
+++ b/source/_posts/daily/2023/06/08.md
@@ -6,3 +6,19 @@ categories:
   - 日常记录
 date: 2023-06-08 11:09:31
 ---
+
+今天继续看了Github Action的Context主题，主要还是如何在脚本执行过程中使用系统变量，以更加灵活的编写脚本，不过系统变量有点多，还没看完，脑壳疼
+
+然后本来计划看看WebGL，然后接着做数字城市，但2D和3D的交互实现方案不满意，只能去优化方案：
+
+1. 通过解析模型(GLTF)查找位置信息，然后根据节点ID入库(需要去熟悉GLTF，极其麻烦)
+2. 在客户端遍历模型入口文件，通过借助Cesium的能力，由客户端发起位置入库命令(需要前后端配合，比较麻烦)
+3. 通过解析scenetree.json(切片工具产生的模型结构树)文件，直接入库(采用)
+
+
+然后Blender今天多少也算是看了一点：😂
+
+1. 遮罩可以快速制作有机物动画(变形、动作...)
+2. 雕刻时如何合并两个对象
+    * ctrl + j: 合并对象
+    * R + remesh: 重新计算网格体
