--- a/source/_posts/daily/2023/06/10.md
+++ b/source/_posts/daily/2023/06/10.md
@@ -13,4 +13,4 @@ date: 2023-06-10 12:03:06
 
 然后今天基本啥也没干，看看天、发发呆、听听歌、擦擦桌、补补觉，就这样慢悠悠的度过一天也挺好 🫠
 
-然后明天就做个自行车吧 _____🚲__🚲_🚲___🚲_🚲🚲_🚲_________
+然后明天就做个自行车吧 \_\_\_\_\_🚲\_\_🚲\_🚲\_\_\_🚲\_🚲🚲\_🚲\_\_\_\_\_\_\_\_\_
