--- a/source/_posts/daily/2023/06/12.md
+++ b/source/_posts/daily/2023/06/12.md
@@ -1,8 +1,89 @@
 ---
-title: 测试自动同步功能
+title: 我是马修，我无话可说
 tags:
   - 日常记录
 categories:
   - 日常记录
 date: 2023-06-12 17:02:46
 ---
+
+今天接着处理了模拟点击事件会导致多个子设备穿透的事，然后对了下接口，不过还没弄完。
+
+然后很开心的一件事是Github和Gitee同步的事终于处理好了，终于不用手动同步了。配置脚本大概是这个样子：
+
+```YAML
+name: deploy
+
+on:
+  push:
+    branches:
+      - main # default branch
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # If your repository depends on submodule, please see: https://github.com/actions/checkout
+          submodules: recursive
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+      - name: Cache NPM dependencies
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-npm-cache
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+
+  sync-to-gitee:
+    needs: build-and-deploy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Organization mirror
+        uses: Yikun/hub-mirror-action@mappings
+        with:
+          src: github/Mkamvi
+          dst: gitee/iWuzhi
+          dst_key: ${{ secrets.SYNC_GITEE_PRIVATE_KEY }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
+          mappings: "mkamvi.github.io=>iWuzhi"
+          static_list: "mkamvi.github.io"
+          force_update: true
+
+  reload-gitee-pages:
+    needs: sync-to-gitee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Gitee Pages
+        uses: yanglbme/gitee-pages-action@main
+        with:
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: iWuzhi
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: iWuzhi
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: gh-pages
+```
+
+大概流程是，Github遇到push事件后，开始构建流程，构建完再触发部署流程，这波完了Github就已经部署好了。然后往Gitee同步代码，接着再触发Gitee Pages重新部署，然后Gitee也就部署好了，耶~
+
