--- a/source/_posts/daily/2023/06/14.md
+++ b/source/_posts/daily/2023/06/14.md
@@ -13,4 +13,4 @@ date: 2023-06-14 21:00:38
 
 然后今天整理了下Blender的快捷键，算是复习了一遍基础操作吧
 
-然后早上总算是把180°的自行车主杠给弄好了，明天终于能整车轮了🤸‍♂️
+然后早上总算是把180°的自行车主杠给弄好了，还是使用细分跟平滑，明天终于能整车轮了🤸‍♂️
