--- a/source/_posts/daily/2023/06/02.md
+++ b/source/_posts/daily/2023/06/02.md
@@ -5,6 +5,7 @@ tags:
   - 日常记录
 categories:
   - 日常记录
+hide: true
 ---
 
 今天仔细分析了下实时航线的实现方式，了解了下如何计算球面的两点间距离(参考 Great-circle distance 和 Haversine formula)，然后优化了下飞机落地方向。
