--- a/source/_posts/daily/2023/06/06.md
+++ b/source/_posts/daily/2023/06/06.md
@@ -5,6 +5,7 @@ tags:
 categories:
   - 日常记录
 date: 2023-06-06 07:03:58
+hide: true
 ---
 
 处理了下家里电脑NeoVim启动报错问题，通过scoop装了gcc，然后发现lualine插件中文会乱码，便先把后半段给截掉了，后面再看看吧。
