--- a/source/_posts/daily/2023/06/10.md
+++ b/source/_posts/daily/2023/06/10.md
@@ -5,6 +5,7 @@ tags:
 categories:
   - 日常记录
 date: 2023-06-10 12:03:06
+hide: true
 ---
 
 哈哈哈哈哈哈哈<span style='margin-right: 14px;'></span>每次看她都笑的好开心
