--- a/source/_posts/daily/2023/06/08.md
+++ b/source/_posts/daily/2023/06/08.md
@@ -5,6 +5,7 @@ tags:
 categories:
   - 日常记录
 date: 2023-06-08 11:09:31
+hide: true
 ---
 
 今天继续看了Github Action的Context主题，主要还是如何在脚本执行过程中使用系统变量，以更加灵活的编写脚本，不过系统变量有点多，还没看完，脑壳疼
