--- a/source/_posts/hzero/algo/算法通过之路/树.md
+++ b/source/_posts/hzero/algo/算法通过之路/树.md
@@ -52,9 +52,9 @@ Node {
 
 ##### 分类
 
-* 完全二叉树
+* 完全二叉树: 顺序
 * 满二叉树
-* 二叉搜索树
+* 二叉搜索树：左小右大，查找极快
 * 平衡二叉树
 * 红黑树
 
@@ -69,6 +69,7 @@ Node {
 
 * 后序遍历(区别在在于对当前父节点的处理时机，是在回溯是处理还是在访问是就处理)
 * 先序遍历
+* 中序遍历是有序的
 
 
 ### 遍历方式
