post(echarts): Update 对数坐标

--- a/source/_posts/echarts/对数坐标.md
+++ b/source/_posts/echarts/对数坐标.md
@@ -26,3 +26,4 @@ echarts 支持将坐标轴设为 type: log 来使用对数坐标
 
 1. 坐标轴只会根logBase及data做出展示，其他的配置则不会生效
 2. 没办法在对数轴的基础上做更细致的划分
+3. data中不能有0，否则只展示0, 10(logBase)两个刻度
