post(javascript): 运算符/自加运算

--- a/source/_posts/javascript/运算符.md
+++ b/source/_posts/javascript/运算符.md
@@ -9,17 +9,17 @@ categories:
 
 ### 位运算
 
-##### \<\<  (左移)
+##### \<\< (左移)
 
 左移操作符 (\<\<) 将第一个操作数向左移动指定位数，左边超出的位数将会被清除，右边将会补零
 
-> x << y: x * 2 ** y, 即结果是x乘以2的y次方，涉及到2倍数的数字相乘都可以使用左移运算提高执行效率
+> x << y: x \* 2 \*\* y, 即结果是x乘以2的y次方，涉及到2倍数的数字相乘都可以使用左移运算提高执行效率
 
-##### \>\>  (右移)
+##### \>\> (右移)
 
 右移运算符（\>\>）将一个操作数的二进制表示形式向右移动指定位数，该操作数可以是数值或者 BigInt 类型。右边移出位被丢弃，左边移出的空位补符号位（最左边那位）。该操作也称为“符号位传播右移”（sign-propagating right shift）或“算术右移”（arithmetic right shift），因为返回值的符号位与第一个操作数的符号位相同
 
-##### \>\>\>  (无符号右移)
+##### \>\>\> (无符号右移)
 
 > x >>> 0: 这是被滥用的一个表达式，用于将非数字转换成0，或将数字转换为整数
 
@@ -27,5 +27,12 @@ categories:
 
 > 100 >>> 32 与 100 >>> 0结果相同，因为位偏移量将始终是介于 0 和 31 之间的正整数（包括 0 和 31）
 
+### 自加运算
+
+++a
+
+a++
+
+> 注意两者的区别，++a返回值是a + 1, a++ 返回值是a
 
 HoHo !
