post(hero·算法·LeetCode): 回文串确认优化

--- a/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
+++ b/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
@@ -73,3 +73,56 @@ function validPalindromic(str) {
   return true;
 }
 ```
+
+
+### JS实现(暴力双循环 回文串确认优化版)
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+    let targetArr = [0, 1];
+    for (let i = 0; i < s.length - 1; i ++) {
+        for (let j = i + 1; j < s.length; j ++) {
+            if(targetArr[1] - targetArr[0] < j - i + 1 && isPalindrome(s, i, j)) {
+                targetArr = [i, j + 1]
+            }
+        }
+    }
+    return s.slice(targetArr[0], targetArr[1])
+};
+
+function isPalindrome(str, left, right) {
+    while(left < right) {
+        if (str[left] !== str[right]) return false
+        left++;
+        right--;
+    }
+    return true
+}
+```
+
+
+### JS实现(动态规划)
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+  // const 
+};
+
+```
+
+### JS实现(中心扩散)
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+};
+
+```
