post(hzero/algo): 回文串中心扩散

--- a/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
+++ b/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
@@ -74,55 +74,74 @@ function validPalindromic(str) {
 }
 ```
 
-
 ### JS实现(暴力双循环 回文串确认优化版)
+
 ```js
 /**
  * @param {string} s
  * @return {string}
  */
-var longestPalindrome = function(s) {
-    let targetArr = [0, 1];
-    for (let i = 0; i < s.length - 1; i ++) {
-        for (let j = i + 1; j < s.length; j ++) {
-            if(targetArr[1] - targetArr[0] < j - i + 1 && isPalindrome(s, i, j)) {
-                targetArr = [i, j + 1]
-            }
-        }
+var longestPalindrome = function (s) {
+  let targetArr = [0, 1];
+  for (let i = 0; i < s.length - 1; i++) {
+    for (let j = i + 1; j < s.length; j++) {
+      if (targetArr[1] - targetArr[0] < j - i + 1 && isPalindrome(s, i, j)) {
+        targetArr = [i, j + 1];
+      }
     }
-    return s.slice(targetArr[0], targetArr[1])
+  }
+  return s.slice(targetArr[0], targetArr[1]);
 };
 
 function isPalindrome(str, left, right) {
-    while(left < right) {
-        if (str[left] !== str[right]) return false
-        left++;
-        right--;
-    }
-    return true
+  while (left < right) {
+    if (str[left] !== str[right]) return false;
+    left++;
+    right--;
+  }
+  return true;
 }
 ```
 
-
 ### JS实现(动态规划)
+
 ```js
 /**
  * @param {string} s
  * @return {string}
  */
-var longestPalindrome = function(s) {
-  // const 
+var longestPalindrome = function (s) {
+  // const
 };
-
 ```
 
 ### JS实现(中心扩散)
+中心扩散的核心还是在回文串的判断方式上，是从中心扩散的方式j
+
 ```js
 /**
  * @param {string} s
  * @return {string}
  */
-var longestPalindrome = function(s) {
+var longestPalindrome = function (s) {
+  if (s.length < 2) return s.length;
+  let maxLen = 1,
+    max;
+  for (let i = 0; i < s.length - 1; i++) {
+    let [s1, e1] = isPalindrome(s, i, i);
+    let [s2, e2] = isPalindrome(s, i, i + 1);
+    maxLen = Math.max(maxLen, e1 - s1, e2 - s2);
+  }
+  // TODO: 待补充
+  // return s.substring()
 };
 
+function isPalindrome(str, left, right) {
+  while (left >= 0 && right < str.length) {
+    if (str[left] !== str[right]) return [left - 1, right - 1];
+    left--;
+    right++;
+  }
+  return [left, right];
+}
 ```
