post(hzero/algo): 回文串动态规划

--- a/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
+++ b/source/_posts/hero/algo/leetcode/0005 最长回文子串.md
@@ -111,11 +111,39 @@ function isPalindrome(str, left, right) {
  * @return {string}
  */
 var longestPalindrome = function (s) {
-  // const
+  const smap = [];
+  let [start, end] = [0, 0];
+
+  for (let j = 0; j < s.length; j++) {
+    for (let i = j; i >= 0; i--) {
+      if (!smap[i]) smap[i] = [];
+      // 单个情况
+      if (i === j) {
+        smap[i][j] = true;
+      } else if (s[i] !== s[j]) {
+        smap[i][j] = false;
+      } else if (j - i === 1 && s[i] === s[j]) {
+        smap[i][j] = true;
+        if (end - start < j - i) {
+          start = i;
+          end = j;
+        }
+      } else if (s[i] === s[j] && smap[i + 1][j - 1]) {
+        smap[i][j] = true;
+        if (end - start < j - i) {
+          start = i;
+          end = j;
+        }
+      }
+    }
+  }
+
+  return s.slice(start, end + 1);
 };
 ```
 
 ### JS实现(中心扩散)
+
 中心扩散的核心还是在回文串的判断方式上，是从中心扩散的方式j
 
 ```js
