chore: 更新wanmeishijie.xyz

--- a/source/_posts/daily/2023/06/05.md
+++ b/source/_posts/daily/2023/06/05.md
@@ -14,7 +14,7 @@ hide: true
 
 然后今天计划开始把WebGL再系统的学习一次了，大概是把学习路线给整好了，后面就慢慢整理起来就行了。
 
-然后想不到的是Gitee的认证通过了，原本以为至少要一天以上的时间，就顺便从Github把这个博客同步过来了，Gitee虽然国内访问快，但
+然后想不到的是Gitee的认证通过了，原本以为至少要一天以上的时间，就顺便从Github把这个个人主页同步过来了，Gitee虽然国内访问快，但
 自定义域名需要收费，这个就很烦，我的域名又没有备案，备案又需要服务器，然后我又不想买，所以就陷入死循环了。所以今天买了七牛云，想试下
 能否直接使用域名解析，不行的话就当个存储服务吧。
 
