--- a/source/_posts/daily/2023/05/31.md
+++ b/source/_posts/daily/2023/05/31.md
@@ -14,7 +14,7 @@ hide: true
 
 GeForce Experience 突然登录不上了，挂 VPN、修改 DNS，然并没啥用。
 
-然后想在 Window 系统装下 Nvim，方便后面写博客用，但 packer 安装依赖失败，Powershell 对系统代理不生效。也是配了$env:HTTP_PROXY 啥的，然并卵用。
+然后想在 Window 系统装下 Nvim，方便后面写个人主页用，但 packer 安装依赖失败，Powershell 对系统代理不生效。也是配了$env:HTTP_PROXY 啥的，然并卵用。
 
 最后尝试 curl google.com时提示需要在 IE 浏览器做初始化配置，于是打开了 IE，然后就好了...
 
