post(年终总结): 2 0 2 3 补充 Lua

--- a/source/_posts/annual-review/2023.md
+++ b/source/_posts/annual-review/2023.md
@@ -43,6 +43,7 @@ categories:
 
 - Nvim: nvim 版本做了一次升级(0.8 -> 0.9)，且更新了大量配置，并兼容了Mac、Window(Neovide)、Linux(Ubunut，使用远程登录和Mac本身基本一样)三端
 - Emacs: 已经快要放弃了(无聊的时候还会玩一下)，超级冗长的组合键按的确实没有vim好用
+- Lua: 断断续续的学了一段时间，现在阅读和修改Nvim插件基本毫无压力
 
 ### 慢(不得不提)
 
