--- a/source/_posts/echarts/如何分段展示曲线.md
+++ b/source/_posts/echarts/如何分段展示曲线.md
@@ -11,39 +11,38 @@ categories:
 
 > 关于series维度理解还是不够啊
 
-```json
+```javascript
 option = {
   xAxis: {
-    type: 'category',
-    data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+    type: "category",
+    data: ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"],
   },
   yAxis: {
-    type: 'value'
+    type: "value",
   },
   visualMap: {
     dimension: 0,
     pieces: [
       {
-            lte: 2,
-            color: "orange",
-          },
-          {
-            gt: 2,
-            lte: 4,
-            color: "red",
-          },
-          {
-            gt: 2,
-            color: "cyan",
-          },
-    ]
+        lte: 2,
+        color: "orange",
+      },
+      {
+        gt: 2,
+        lte: 4,
+        color: "red",
+      },
+      {
+        gt: 2,
+        color: "cyan",
+      },
+    ],
   },
   series: [
     {
       data: [150, 230, 224, 218, 135, 147, 260],
-      type: 'line'
-    }
-  ]
+      type: "line",
+    },
+  ],
 };
-
 ```
